# Agentic-Incident-Response-ESORICS26

./: .gitignore  LICENSE.md  Makefile  PROMPT_TEMPLATES.md  README.md  make_release.py  pyproject.toml  requirements.txt  requirements_frozen_vm_py311.txt  setup.cfg  tox.ini
llm_ir_dt/: docker-compose.yml  main.py  main2.py  pyproject.toml  requirements.txt  requirements_dev.txt
llm_ir_dt/containers/client/: Dockerfile
llm_ir_dt/containers/gateway/: Dockerfile  entrypoint.sh
llm_ir_dt/containers/gateway/config/: local.rules  snort.conf
llm_ir_dt/containers/server_samba/: Dockerfile  entrypoint.sh
llm_ir_dt/containers/server_shellshock/: Dockerfile
llm_ir_dt/containers/server_ssh/: Dockerfile  entrypoint.sh
llm_ir_dt/containers/server_ssh/config/: sshd_config
llm_ir_dt/containers/server_web/: Dockerfile
llm_ir_dt/src/llm_ir_dt/constants/: constants.py
llm_ir_dt/src/llm_ir_dt/docker_manager/: docker_manager.py
llm_ir_dt_new/: .flake8  .gitattributes  .gitignore  CLAUDE.md  QWEN_PLAN_MAPPING.md  README.md  RECOVERY_PLAYBOOK_CN.md  STATE_VERIFICATION_METHOD.md  STATE_VERIFICATION_METHOD_CN.md  clean_and_thin_alerts.py  compress_alert_logs.py  docker-compose.yml  export_alert_logs.py  generated_recovery_plan.ps1  generated_recovery_plan_alt_pivot_logged.ps1  generated_recovery_plan_alt_pivot_logged.sh  generated_recovery_plan_logged.ps1  generated_recovery_plan_logged211faithtechniques.ps1  generated_recovery_plan_logged211techniques.ps1  generated_recovery_plan_logged211withouttechniques.ps1  generated_recovery_plan_web_servers.ps1  generated_recovery_plan_web_servers.sh  install.sh  replay_four_servers_recovery_times.sh  replay_selected_plans.py  run_attack.py  run_attack2.py  run_attack_alt_pivot.py  run_attack_five_servers_diverse.py  run_attack_four_servers_diverse.py  run_attack_no_lateral.py  run_attack_old_version.py  run_attack_ssh_samba.py  run_attack_web_servers.py  run_command.py  run_recovery.py  run_recovery_loop_api_baseline_llm_state.py  run_recovery_loop_ircopilot_baseline_llm_state.py  run_recovery_loop_ircopilot_system_six_state_baseline_llm_state.py  run_recovery_loop_llm_state.py  (+14 more)
llm_ir_dt_new/containers/client/: Dockerfile  entrypoint.sh
llm_ir_dt_new/containers/client/config/: passwords.txt
llm_ir_dt_new/containers/gateway/: Dockerfile  entrypoint.sh
llm_ir_dt_new/containers/gateway/config/: local.rules  snort.conf  (+2 more)
llm_ir_dt_new/containers/server_samba/: Dockerfile  entrypoint.sh
llm_ir_dt_new/containers/server_shellshock/: Dockerfile  entrypoint.sh
llm_ir_dt_new/containers/server_ssh/: Dockerfile
llm_ir_dt_new/containers/server_web/: Dockerfile  entrypoint.sh  vulnerable_diag_server.py  vulnerable_upload_server.py
llm_ir_dt_new/inputs/: alerts_afterrecovery.json  dt_command_context.txt  dt_project_context_full.txt  incident.txt  incident_5_servers_diverse.txt  incident_alt_pivot.txt  incident_four_servers_diverse.txt  log_alt_pivot.txt  log_alt_pivot2.txt  logs.txt  logs_5_servers_diverse.txt  logs_four_servers_diverse.txt  logs_tcp.txt  logs_tcp_half_duplicates.txt  logs_tcp_half_duplicates_afterrecovery.txt  logs_tcp_half_duplicates_afterrecovery_cleaned.txt  system.txt  system_after_server_ssh_recovery.txt  system_after_ssh_recovery.txt  system_new.txt
(+60 files in other folders)
