[metadata]
name = llm_ir_dt
version = attr: llm_ir_dt.__version__
description = Dockerized incident response testbed (digital twin)
author = Kim Hammar
author_email = hammar.kim@gmail.com
license = Creative Commons Attribution-ShareAlike 4.0 International
keywords = Cyber-Security Incident-Response Digital-Twin
license_files =
    - LICENSE.md
    - README.md
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Intended Audience :: Science/Research

[options]
install_requires =
    docker>=7.1.0
    requests>=2.32.3
    pydantic>=2.10.6
python_requires = >=3.11
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.6.0
    mypy>=1.7.0
    mypy-extensions>=1.0.0
    types-requests>=2.31.0
    flake8>=6.1.0
    flake8-rst-docstrings>=0.3.0
    tox>=4.24.1
    build>=0.10.0

[options.package_data]
llm_ir_dt = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,*_pb2*,*init__*,.tox
ignore = E741, W503, W504, F821, W605
rst-roles = class, func, ref
rst-directives = envvar, exception
rst-substitutions = version
extend-ignore = D401, D400, D100, RST305, RST219, D205, D202, D200, D204, RST206, W293, D403, D402, RST306
